// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/components/HoldemBoardBar Flop smoke-test 1`] = `
<div class="_container_165xw_1">
  <div class="_header_165xw_7">
    <div class="_container_orzyj_2"
         data-card="C2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="H2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="DJ"
    >
      <span data-front-card="true">
        J
      </span>
      <span data-back-card="true">
      </span>
    </div>
  </div>
  <div class="_body_165xw_25">
    <span>
      POT
    </span>
    <span>
      300,000
    </span>
  </div>
  <div class="_footer_165xw_40">
    <span>
      2024 XXXX EVENTS - final table
    </span>
  </div>
</div>
`;

exports[`stories/components/HoldemBoardBar PreFlop smoke-test 1`] = `
<div class="_container_165xw_1">
  <div class="_header_165xw_7">
  </div>
  <div class="_body_165xw_25">
    <span>
      POT
    </span>
    <span>
      100,000
    </span>
  </div>
  <div class="_footer_165xw_40">
    <span>
      2024 XXXX EVENTS - final table
    </span>
  </div>
</div>
`;

exports[`stories/components/HoldemBoardBar River smoke-test 1`] = `
<div class="_container_165xw_1">
  <div class="_header_165xw_7">
    <div class="_container_orzyj_2"
         data-card="C2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="H2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="DJ"
    >
      <span data-front-card="true">
        J
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="SK"
    >
      <span data-front-card="true">
        K
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="SQ"
    >
      <span data-front-card="true">
        Q
      </span>
      <span data-back-card="true">
      </span>
    </div>
  </div>
  <div class="_body_165xw_25">
    <span>
      POT
    </span>
    <span>
      10,000,000
    </span>
  </div>
  <div class="_footer_165xw_40">
    <span>
      2024 XXXX EVENTS - final table
    </span>
  </div>
</div>
`;

exports[`stories/components/HoldemBoardBar Turn smoke-test 1`] = `
<div class="_container_165xw_1">
  <div class="_header_165xw_7">
    <div class="_container_orzyj_2"
         data-card="C2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="H2"
    >
      <span data-front-card="true">
        2
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="DJ"
    >
      <span data-front-card="true">
        J
      </span>
      <span data-back-card="true">
      </span>
    </div>
    <div class="_container_orzyj_2"
         data-card="SK"
    >
      <span data-front-card="true">
        K
      </span>
      <span data-back-card="true">
      </span>
    </div>
  </div>
  <div class="_body_165xw_25">
    <span>
      POT
    </span>
    <span>
      1,000,000
    </span>
  </div>
  <div class="_footer_165xw_40">
    <span>
      2024 XXXX EVENTS - final table
    </span>
  </div>
</div>
`;
